force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>PV-Product</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PV-Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>