force-app/main/default/objects/Product__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <label>Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>AS</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>Drop Ship</fullName>
            </value>
            <value>
                <fullName>GH</fullName>
            </value>
            <value>
                <fullName>JK</fullName>
            </value>
            <value>
                <fullName>JL</fullName>
            </value>
            <value>
                <fullName>JM</fullName>
            </value>
            <value>
                <fullName>KM</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
            <value>
                <fullName>RW</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>ZM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>