force-app/main/default/objects/Product__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>CONNECTED SOLUTIONS</fullName>
            </value>
            <value>
                <fullName>DAS</fullName>
            </value>
            <value>
                <fullName>DIST</fullName>
            </value>
            <value>
                <fullName>FIBER</fullName>
            </value>
            <value>
                <fullName>INTL</fullName>
            </value>
            <value>
                <fullName>NATIONAL</fullName>
            </value>
            <value>
                <fullName>VIASAT</fullName>
            </value>
            <value>
                <fullName>WIRELESS</fullName>
            </value>
            <value>
                <fullName>WISP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>