force-app/main/default/objects/Product__c/fields/Item_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Name_Number__c</fullName>
    <label>Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>