force-app/main/default/objects/Product__c/fields/Minimum_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Selling_Price__c</fullName>
    <label>Minimum Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>