force-app/main/default/objects/Product__c/fields/Primary_Cat__c.field-meta.xml
<CustomField>
    <fullName>Primary_Cat__c</fullName>
    <label>Primary Cat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actives/Passives</fullName>
            </value>
            <value>
                <fullName>Assemblies</fullName>
            </value>
            <value>
                <fullName>Cables</fullName>
            </value>
            <value>
                <fullName>Connectors</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
            <value>
                <fullName>Installation Accessories</fullName>
            </value>
            <value>
                <fullName>Program Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>