force-app/main/default/objects/Product__c/fields/Secondary_Cat__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Cat__c</fullName>
    <label>Secondary Cat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enclosures</fullName>
            </value>
            <value>
                <fullName>Network Equipment</fullName>
            </value>
            <value>
                <fullName>Cables</fullName>
            </value>
            <value>
                <fullName>Cable &amp; Connector Accessories</fullName>
            </value>
            <value>
                <fullName>Weather Proofing &amp; Seals &amp; Tape</fullName>
            </value>
            <value>
                <fullName>Antennas &amp; Dishes</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Kit</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Labeling</fullName>
            </value>
            <value>
                <fullName>Power Supply</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>DAS</fullName>
            </value>
            <value>
                <fullName>Dishes &amp; Antennas</fullName>
            </value>
            <value>
                <fullName>Clips &amp; Clamps &amp; Fasteners</fullName>
            </value>
            <value>
                <fullName>Built Assemblies &amp; Parts</fullName>
            </value>
            <value>
                <fullName>Conduit</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>CAT</fullName>
            </value>
            <value>
                <fullName>Steel Components</fullName>
            </value>
            <value>
                <fullName>Shelter Materials</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Grounding</fullName>
            </value>
            <value>
                <fullName>Inductor</fullName>
            </value>
            <value>
                <fullName>Transformer</fullName>
            </value>
            <value>
                <fullName>Category Jumpers &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Wall Plates &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>50 Ohm Connectors</fullName>
            </value>
            <value>
                <fullName>Patch Panels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>