force-app/main/default/objects/Product__c/fields/Stocking_Type__c.field-meta.xml
<CustomField>
    <fullName>Stocking_Type__c</fullName>
    <label>Stocking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Drop Ship</fullName>
            </value>
            <value>
                <fullName>Kit</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
            <value>
                <fullName>Special Order Item</fullName>
            </value>
            <value>
                <fullName>Stocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>