force-app/main/default/objects/Product__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10FITNES</fullName>
            </value>
            <value>
                <fullName>2001S</fullName>
            </value>
            <value>
                <fullName>3MCOMPA</fullName>
            </value>
            <value>
                <fullName>ABUSALL</fullName>
            </value>
            <value>
                <fullName>ACCUMET</fullName>
            </value>
            <value>
                <fullName>ADASCOT</fullName>
            </value>
            <value>
                <fullName>ADGLOBA</fullName>
            </value>
            <value>
                <fullName>ADLIGHT</fullName>
            </value>
            <value>
                <fullName>ADMEDIA</fullName>
            </value>
            <value>
                <fullName>ADTECHN</fullName>
            </value>
            <value>
                <fullName>ADVCABLE</fullName>
            </value>
            <value>
                <fullName>AFL</fullName>
            </value>
            <value>
                <fullName>AFSON</fullName>
            </value>
            <value>
                <fullName>ALCATEL</fullName>
            </value>
            <value>
                <fullName>ALEUSA</fullName>
            </value>
            <value>
                <fullName>ALEWINC</fullName>
            </value>
            <value>
                <fullName>ALLTEC</fullName>
            </value>
            <value>
                <fullName>ALNDUIT</fullName>
            </value>
            <value>
                <fullName>ALPRODU</fullName>
            </value>
            <value>
                <fullName>ALSALLC</fullName>
            </value>
            <value>
                <fullName>AM525</fullName>
            </value>
            <value>
                <fullName>AMANTEN</fullName>
            </value>
            <value>
                <fullName>AMERON</fullName>
            </value>
            <value>
                <fullName>AMHOLDI</fullName>
            </value>
            <value>
                <fullName>AMOUTFI</fullName>
            </value>
            <value>
                <fullName>AMPHENOL</fullName>
            </value>
            <value>
                <fullName>AMSOURC</fullName>
            </value>
            <value>
                <fullName>AMTO</fullName>
            </value>
            <value>
                <fullName>ANCOMPA</fullName>
            </value>
            <value>
                <fullName>ANELECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>