force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Description__c</columns>
    <columns>List_Price__c</columns>
    <columns>Primary_Cat__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>